--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "bbcscrape",
+  "name": "news-scrapper",
   "version": "1.0.0",
-  "description": "A full stack app that scrapes articles from bbc.co.uk and allows users to make and save comments on the articles.",
-  "main": "index.js",
+  "description": "A full stack app that scrapes articles from the New York Times and allows users to make and save comments on the articles.",
+  "main": "server.js",
+  "dependencies": {
+    "axios": "^0.17.1"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/marielavlz/bbcscrape.git"
+    "url": "git+https://github.com/krititiawri/news-Scrapper.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/marielavlz/bbcscrape/issues"
+    "url": "https://github.com/krititiawri/news-Scrapper/issues"
   },
-  "homepage": "https://github.com/marielavlz/bbcscrape#readme",
-  "dependencies": {
-    "axios": "^0.17.1",
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
-    "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.2",
-    "express-handlebars": "^3.0.0",
-    "mongoose": "^4.12.4",
-    "morgan": "^1.9.0",
-    "request": "^2.83.0"
-  }
+  "homepage": "https://github.com/krititiawri/news-Scrapper#readme"
 }
