--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "A full stack app that scrapes articles from the New York Times and allows users to make and save comments on the articles.",
   "main": "server.js",
   "dependencies": {
-    "axios": "^0.17.1"
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^4.12.4",
+    "morgan": "^1.9.0",
+    "request": "^2.83.0"
   },
   "devDependencies": {},
   "scripts": {
